objects/LLC_BI__Opportunity_History__c.object
<CustomObject>
    <description>The Opportunity History object tracks details of opportunities in nCino</description>
    <fields>
        <fullName>LLC_BI__Amount_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is automatically populated with a trigger. This field is enabled if the current record was created due to an amount change; otherwise, it is disabled.</description>
        <label>Amount Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Amount__c</fullName>
        <description>This field is automatically populated with a trigger. This field is used to specify the amount of the opportunity.</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Change_Time__c</fullName>
        <description>This field is automatically populated with a trigger. This field is used to specify the Date/Time an opportunity record is created due to a change.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Deposit__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is automatically populated with a trigger. This is a look-up field used to specify the deposit record the opportunity history is associated with.</description>
        <label>Deposit</label>
        <referenceTo>LLC_BI__Deposit__c</referenceTo>
        <relationshipLabel>Opportunity History</relationshipLabel>
        <relationshipName>Opportunity_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__End_Time__c</fullName>
        <description>This field is automatically populated with a trigger. This field is used to specify the Date/Time an opportunity record becomes outdated due to a change occurring which creates a new opportunity record.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Final_Stage_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is automatically populated with a trigger. This indicates the final entry for a single stage for a particular loan as a result of the stage changing.</description>
        <inlineHelpText>Set in Code - indicates the final entry for a single stage for a particular loan.</inlineHelpText>
        <label>Final Stage Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Booked__c</fullName>
        <description>This field is automatically populated with a formula. This field is automatically checked when the opportunity is in a &quot;booked&quot; status.</description>
        <formula>IF(LLC_BI__Loan__c != null,CONTAINS(LLC_BI__Loan__r.LLC_BI__Product_Reference__r.LLC_BI__Product_Type__r.LLC_BI__Booked__r.LLC_BI__All_Values__c, LLC_BI__Stage_And_Status__c),false)</formula>
        <label>Is Booked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Closed__c</fullName>
        <description>This field is automatically populated via formula. It  automatically sets the value to true or false based on the stage and status of the loan. The value is set to true once a loan reaches the equivalent of a closing stage for a financial institution.</description>
        <formula>IF(LLC_BI__Loan__c != null,CONTAINS(LLC_BI__Loan__r.LLC_BI__Product_Reference__r.LLC_BI__Product_Type__r.LLC_BI__Closed__r.LLC_BI__All_Values__c, LLC_BI__Stage_And_Status__c),false)</formula>
        <label>Is Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Excluded_From_Stage_Duration__c</fullName>
        <description>This field is automatically populated via formula. It automatically sets the value to true or false based on the stage and status of the loan. The value is set to true once a loan reaches the equivalent of a stage that is excluded from the stage duration history for a financial institution.</description>
        <formula>IF(LLC_BI__Loan__c != null,CONTAINS(LLC_BI__Loan__r.LLC_BI__Product_Reference__r.LLC_BI__Product_Type__r.LLC_BI__Excluded__r.LLC_BI__All_Values__c, LLC_BI__Stage_And_Status__c),false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Excluded From Stage Duration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is automatically populated with a trigger. This field is a lookup field and is used to specify the loan record that the opportunity history is associated with.</description>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Opportunity History</relationshipLabel>
        <relationshipName>Opportunity_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__OpportunityId__c</fullName>
        <description>This field is automatically populated with a trigger. Opportunity ID is the Id of the product opportunity each stage record is associated with. There is no master-detail relationship to enable supporting an unlimited number of opportunities.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Opportunity Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Previous_Stage_Duration_Excluded_Minutes__c</fullName>
        <description>This field is automatically populated with a trigger on insert. This field holds the sum of the Stage Duration Minutes for its stage of a single loan.</description>
        <label>Previous Stage Duration Excluded Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Previous_Stage_Duration_Minutes__c</fullName>
        <description>This field is automatically populated with a trigger on insert. This field holds the previous sum of the Stage Duration Minutes for its stage of a single loan.</description>
        <inlineHelpText>Set in Code - holds the previous Stage Duration Minutes for its stage of a single loan.</inlineHelpText>
        <label>Previous Stage Duration Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Previous_Stage_Duration_Non_Business_Min__c</fullName>
        <description>This field is automatically populated with a trigger. This field holds the previous sum of the Stage Duration Minutes for its stage of a single loan (non-business hours only).</description>
        <inlineHelpText>Set in Code - holds the previous Stage Duration Minutes for its stage of a single loan (Non-business hours only).</inlineHelpText>
        <label>Prev Stage Duration Non-Business Mins</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Package__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is automatically populated. It identifies the Product Package record associated with the Opportunity History.</description>
        <label>Product Package</label>
        <referenceTo>LLC_BI__Product_Package__c</referenceTo>
        <relationshipLabel>Opportunity History</relationshipLabel>
        <relationshipName>Opportunity_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Record_Duration_Excluded_Minutes__c</fullName>
        <description>This field is automatically populated via formula. It identifies the number of minutes that have been excluded from the total amount of time spent in a specificed stage due to product state config settings.</description>
        <formula>IF(ISNULL(LLC_BI__End_Time__c),null,IF(LLC_BI__Is_Excluded_From_Stage_Duration__c, LLC_BI__Stage_Duration_Minutes__c - LLC_BI__Stage_Duration_Non_Business_Minutes__c, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Duration Excluded Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__StageName__c</fullName>
        <description>This field is automatically populated with a trigger. This field is a used to specify the stage of the loan at the creation of this record.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Stage Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Stage_And_Status__c</fullName>
        <description>This field is automatically populated with a formula. This field is used to specify the stage and status of the opportunity.</description>
        <formula>&quot;#&quot; &amp; LLC_BI__StageName__c &amp; &quot;|&quot; &amp; LLC_BI__StatusName__c &amp; &quot;#&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage And Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Stage_Change__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is automatically populated with a trigger. This field is checked and set if the current record indicates a stage change.</description>
        <label>Stage Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Stage_Duration_Hours__c</fullName>
        <description>This field is automatically populated with a formula. This field holds the Stage Duration Hours for each stage entry, for a single loan.</description>
        <formula>IF(ISNULL(LLC_BI__End_Time__c), null, 24 * LLC_BI__Stage_Duration__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Set in Code - Holds the Stage Duration Hours for each Stage entry, for a single loan.</inlineHelpText>
        <label>Record Duration Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Stage_Duration_Minutes__c</fullName>
        <description>This field is automatically populated with a formula. This field holds the Stage Duration Minutes for each Stage entry, for a single loan.</description>
        <formula>IF(ISNULL(LLC_BI__End_Time__c), null, 60 * 24 * LLC_BI__Stage_Duration__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Set in Code - Holds the Stage Duration Minutes for each Stage entry, for a single loan.</inlineHelpText>
        <label>Record Duration Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Stage_Duration_Non_Business_Minutes__c</fullName>
        <description>This field is automatically populated via formula. It identifies the number of Non-Business minutes that have been excluded from the total amount of time spent in a specificed stage.</description>
        <label>Record Duration Non Business Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Stage_Duration__c</fullName>
        <description>This field is automatically populated with a formula. This formula field specifies the stage duration in days.</description>
        <formula>IF(ISNULL(LLC_BI__End_Time__c), NOW() - LLC_BI__Change_Time__c, LLC_BI__End_Time__c - LLC_BI__Change_Time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Duration Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__StatusName__c</fullName>
        <description>This field is automatically populated with a trigger. This field is used to specify the status of the loan at the creation of this record.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Status Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Status_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is automatically populated with a trigger. This field is enabled if the current record was created due to a stage change, otherwise it is disabled.</description>
        <label>Status Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Sum_Stage_Duration_Days__c</fullName>
        <description>This field is automatically populated with a formula. This field holds the sum of the Stage Duration Days for each Final Stage Change, for a single loan.</description>
        <formula>IF(AND(LLC_BI__Final_Stage_Change__c, NOT(ISNULL(LLC_BI__Loan__c)), OR(LLC_BI__Loan__r.LLC_BI__Is_Booked__c, LLC_BI__Loan__r.LLC_BI__Is_Closed__c)), LLC_BI__Total_Stage_Duration_Minutes__c / 60 / 24, null)</formula>
        <inlineHelpText>Set in Code - Holds the sum of the Stage Duration Days for each Final Stage Change, for a single loan.</inlineHelpText>
        <label>Sum Stage Duration Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Sum_Stage_Duration_Excluded_Days__c</fullName>
        <description>This field is automatically populated via formula. It identifies the total (sum) number of days that have been excluded from the Opportunity History.</description>
        <formula>IF(AND(LLC_BI__Final_Stage_Change__c, NOT(ISNULL(LLC_BI__Loan__c)), OR(LLC_BI__Loan__r.LLC_BI__Is_Booked__c, LLC_BI__Loan__r.LLC_BI__Is_Closed__c)), LLC_BI__Total_Stage_Duration_Excluded_Minutes__c / 60 / 24, null)</formula>
        <label>Sum Stage Duration Excluded Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Sum_Stage_Duration_Excluded_Hours__c</fullName>
        <description>This field is automatically populated via formula. It identifies the total (sum) number of hours that have been excluded from the Opportunity History.</description>
        <formula>IF(AND(LLC_BI__Final_Stage_Change__c, NOT(ISNULL(LLC_BI__Loan__c)), OR(LLC_BI__Loan__r.LLC_BI__Is_Booked__c, LLC_BI__Loan__r.LLC_BI__Is_Closed__c)), LLC_BI__Total_Stage_Duration_Excluded_Minutes__c / 60, null)</formula>
        <label>Sum Stage Duration Excluded Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Sum_Stage_Duration_Excluded_Minutes__c</fullName>
        <description>This field is automatically populated via formula. It identifies the total (sum) number of minutes that have been excluded from the Opportunity History.</description>
        <formula>IF(AND(LLC_BI__Final_Stage_Change__c, NOT(ISNULL(LLC_BI__Loan__c)), OR(LLC_BI__Loan__r.LLC_BI__Is_Booked__c, LLC_BI__Loan__r.LLC_BI__Is_Closed__c)), LLC_BI__Total_Stage_Duration_Excluded_Minutes__c, null)</formula>
        <label>Sum Stage Duration Excluded Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Sum_Stage_Duration_Hours__c</fullName>
        <description>This field is automatically populated with a formula. This field holds the sum of the Stage Duration Hours for each Final Stage Change, for a single loan.</description>
        <formula>IF(AND(LLC_BI__Final_Stage_Change__c, NOT(ISNULL(LLC_BI__Loan__c)), OR(LLC_BI__Loan__r.LLC_BI__Is_Booked__c, LLC_BI__Loan__r.LLC_BI__Is_Closed__c)), LLC_BI__Total_Stage_Duration_Minutes__c / 60, null)</formula>
        <inlineHelpText>Set in Code - Holds the sum of the Stage Duration Hours for each Final Stage Change, for a single loan.</inlineHelpText>
        <label>Sum Stage Duration Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Sum_Stage_Duration_Minutes__c</fullName>
        <description>This field is automatically populated with a formula. This field holds the sum of the Stage Duration Minutes for each Final Stage Change, for a single loan.</description>
        <formula>IF(AND(LLC_BI__Final_Stage_Change__c, NOT(ISNULL(LLC_BI__Loan__c)), OR(LLC_BI__Loan__r.LLC_BI__Is_Booked__c, LLC_BI__Loan__r.LLC_BI__Is_Closed__c)), LLC_BI__Total_Stage_Duration_Minutes__c, null)</formula>
        <inlineHelpText>Set in Code - Holds the sum of the Stage Duration Minutes for each Final Stage Change, for a single loan.</inlineHelpText>
        <label>Sum Stage Duration Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Sum_Stage_Duration_Non_Business_Days__c</fullName>
        <description>This field is automatically populated via formula. It identifies the total (sum) number of non-business days that have been excluded from the Opportunity History.</description>
        <formula>IF(AND(LLC_BI__Final_Stage_Change__c, NOT(ISNULL(LLC_BI__Loan__c)), OR(LLC_BI__Loan__r.LLC_BI__Is_Booked__c, LLC_BI__Loan__r.LLC_BI__Is_Closed__c)), LLC_BI__Total_Stage_Duration_Non_Business_Min__c / 60 / 24, null)</formula>
        <label>Sum Stage Duration Non-Business Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Sum_Stage_Duration_Non_Business_Hours__c</fullName>
        <description>This field is automatically populated via formula. It identifies the total (sum) number of non-business hours that have been excluded from the Opportunity History.</description>
        <formula>IF(AND(LLC_BI__Final_Stage_Change__c, NOT(ISNULL(LLC_BI__Loan__c)), OR(LLC_BI__Loan__r.LLC_BI__Is_Booked__c, LLC_BI__Loan__r.LLC_BI__Is_Closed__c)), LLC_BI__Total_Stage_Duration_Non_Business_Min__c / 60, null)</formula>
        <label>Sum Stage Duration Non-Business Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Sum_Stage_Duration_Non_Business_Minutes__c</fullName>
        <description>This field is automatically populated via formula. It identifies the total (sum) number of non-business minutes that have been excluded from the Opportunity History.</description>
        <formula>IF(AND(LLC_BI__Final_Stage_Change__c, NOT(ISNULL(LLC_BI__Loan__c)), OR(LLC_BI__Loan__r.LLC_BI__Is_Booked__c, LLC_BI__Loan__r.LLC_BI__Is_Closed__c)), LLC_BI__Total_Stage_Duration_Non_Business_Min__c, null)</formula>
        <label>Sum Stage Duration Non-Business Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Stage_Duration_Excluded_Minutes__c</fullName>
        <description>This field is automatically populated via formula. It identifies the total (sum) number of minutes that have been excluded from the Opportunity History of a particular stage.</description>
        <formula>IF(ISNULL(LLC_BI__Previous_Stage_Duration_Excluded_Minutes__c), LLC_BI__Record_Duration_Excluded_Minutes__c , LLC_BI__Record_Duration_Excluded_Minutes__c + LLC_BI__Previous_Stage_Duration_Excluded_Minutes__c)</formula>
        <label>Total Stage Duration Excluded Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Stage_Duration_Minutes__c</fullName>
        <description>This field is automatically populated with a formula. It contains the total stage duration in minutes.</description>
        <formula>IF(ISNULL(LLC_BI__Previous_Stage_Duration_Minutes__c), LLC_BI__Stage_Duration_Minutes__c, LLC_BI__Stage_Duration_Minutes__c + LLC_BI__Previous_Stage_Duration_Minutes__c )</formula>
        <label>Total Stage Duration Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Stage_Duration_Non_Business_Min__c</fullName>
        <description>This field is automatically populated with a formula. It contains the total non-business hours stage duration in minutes.</description>
        <formula>IF(ISNULL(LLC_BI__Previous_Stage_Duration_Non_Business_Min__c), LLC_BI__Stage_Duration_Non_Business_Minutes__c, LLC_BI__Stage_Duration_Non_Business_Minutes__c + LLC_BI__Previous_Stage_Duration_Non_Business_Min__c)</formula>
        <label>Total Stage Duration Non-Business Mins</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Treasury_Service__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is automatiaclly populated. It identifies the Treasury Managment record associated with the Opportunity History.</description>
        <label>Treasury Service</label>
        <referenceTo>LLC_BI__Treasury_Service__c</referenceTo>
        <relationshipLabel>Opportunity History</relationshipLabel>
        <relationshipName>Opportunity_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is automatically populated with a trigger. This field is used to specify the person who made the modification to the opportunity stage/status.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Stage_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Opportunity History</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OH-{00000000}</displayFormat>
        <label>Opportunity Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>